update plugin resources from template